improve yaml ordering
